updating nav_menu to sync with main marketing site

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,6 +27,7 @@
       <!-- Main Stylesheets -->
       <link rel="stylesheet" type="text/css" href="https://images.plot.ly/assets/css/normalize.css">
       <link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/main.css?version={{ site.data.cache_bust_css | truncate: 10, '' }}">
+      <link rel="stylesheet" href="//cdn.materialdesignicons.com/3.5.95/css/materialdesignicons.min.css">
 
       <!-- LOCAL DEV STYLESHEET -->
       <!--<link rel="stylesheet" type="text/css" href="http://api.plotly.dev/all_static/css/main.css">-->
